--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -558,9 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean(col_name):\n",
-    "    cleaned = #Your code here; whatever you want to do to col_name. Hint: think back to str methods.\n",
-    "    return cleaned"
+    "i"
    ]
   },
   {
@@ -1309,7 +1309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
