automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -560,7 +560,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i"
+    "def clean(col_name):\n",
+    "    cleaned = #Your code here; whatever you want to do to col_name. Hint: think back to str methods.\n",
+    "    return cleaned"
    ]
   },
   {
