automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1249,7 +1249,9 @@
     "#Recall that default behavior for .sort_values() is ascending.\n",
     "#Hence, we look at the tail rather then head for top values\n",
     "#Alternatively, we could use .sort_values(ascending=False) followed by the .head() method\n",
-    "_"
+    "to_graph.tail(10).plot(kind='barh');\n",
+    "plt.title('Top 10 Stations Based on Number of Entries.');\n",
+    "plt.xlabel('Number of Entries/Exits');"
    ]
   },
   {
